# cs3861-baseline

./: CMakeLists.txt  README.md  libpanda-apps.yaml  package.xml
baseline/: install.sh  installController.sh  installRosPackages.sh  start.sh  stop.sh  uninstall.sh
launch/: baseline.launch
scripts/: baseline.py  lead_car_receiver.py  live_tracker.py
