<?xml version="1.0"?>
<package format="2">
  <name>baseline</name>
  <version>0.2.0</version>
  <description>The baseline package</description>

  <maintainer email="william.a.richardson@vanderbilt.edu">Alex Richardson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <export>
  </export>
</package>
